Fixes collapse breakpoint

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+$grid-float-breakpoint: 1150px;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "global.scss";
